fix bugs on keypoint falko

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,19 @@ else(${EIGEN3_FOUND})
   message(WARNING "Cannot find Eigen3 Library")
 endif(${EIGEN3_FOUND})
 
+# JSON
+find_package(nlohmann_json REQUIRED)  
+# message(STATUS "nlohmann_json_FOUND ${nlohmann_json_FOUND}")
+# message(STATUS "nlohmann_json_INCLUDE_DIRS ${nlohmann_json_INCLUDE_DIRS}")
+# message(STATUS "json_LIBRARY_DIRS ${json_LIBRARY_DIRS}")
+# message(STATUS "json_LIBRARIES ${json_LIBRARIES}")
+
+# if(${nlohmann_json_FOUND}) 
+#   message(STATUS "include dir: ${nlohmann_json_SOURCE_DIR}/nlohmann")
+#   include_directories(${nlohmann_json_SOURCE_DIR}/nlohmann)  
+#   # link_directories(${json_LIBRARY_DIRS})
+# endif()
+
 message(STATUS "include dir: ${falkolib_SOURCE_DIR}/include")
 message(STATUS "include dir: ${falkolib_SOURCE_DIR}/EXTERNAL")
 include_directories(${falkolib_SOURCE_DIR}/include ${falkolib_SOURCE_DIR}/EXTERNAL)  
